# fx-system

./: .gitignore  Cargo.toml  PROMPT.md  README.md  activity-backtest-fix.md  activity-design-gap.md  activity-forward.md  activity-verification.md  activity.md  backtest_result.json  mise.toml  ml-pipeline-plan.md  paper-trading-readiness.md  prd-backtest-fix.md  prd-design-gap.md  prd-forward.md  prd-verification.md  prd.md  pyproject.toml  ralph-loop-summary.md  trade-volume-improvements.md  trades.csv
.claude/: ralph-loop.local.md  settings.json
crates/backtest/: Cargo.toml
crates/backtest/src/: data.rs  engine.rs  lib.rs  stats.rs
crates/backtest/tests/: integration.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  config.rs  main.rs  output.rs
crates/cli/tests/: integration.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  observability.rs  random.rs  types.rs
crates/events/: Cargo.toml  build.rs
crates/events/src/: bus.rs  event.rs  gap_detector.rs  header.rs  lib.rs  projector.rs  runtime.rs  stream.rs
crates/events/src/store/: mod.rs  schema.rs  tier1.rs  tier2.rs  tier3.rs
crates/execution/: Cargo.toml
crates/execution/src/: gateway.rs  lib.rs  lp_monitor.rs  lp_recalibration.rs  order.rs  otc_model.rs
crates/forward/: Cargo.toml
crates/forward/src/: alert.rs  comparison.rs  config.rs  feed.rs  lib.rs  paper.rs  report.rs  runner.rs  tracker.rs
crates/forward/tests/: integration.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: error.rs  fix.rs  lib.rs  market.rs
crates/risk/: Cargo.toml
crates/risk/src/: barrier.rs  global_position.rs  kill_switch.rs  lib.rs  lifecycle.rs  limits.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: bayesian_lr.rs  change_point.rs  extractor.rs  features.rs  lib.rs  mc_eval.rs  policy.rs  q_state.rs  regime.rs  strategy_a.rs  strategy_b.rs  strategy_c.rs  thompson_sampling.rs
crates/strategy/tests/: test_onnx_regime.rs
docs/spec/: design.md
proto/: decision_event.proto  event_header.proto  execution_event.proto  gap_event.proto  market_event.proto  policy_command.proto  state_snapshot.proto  trade_skip_event.proto
research/: __init__.py
research/analysis/: __init__.py  cpcv.py  dsr.py  leakage.py  pbo.py  pipeline.py  sensitivity.py  validation.py
research/backtest/: __init__.py
research/bridge/: __init__.py  cli.py  loader.py  output.py  runner.py
research/features/: __init__.py  loader.py  preprocess.py
research/models/: __init__.py  generate_regime_model.py  hdp_hmm.py  onnx_export.py  train_regime.py
research/models/onnx/: regime_v1.onnx  regime_v1_meta.json
research/tests/: __init__.py  test_bridge.py  test_e2e_pipeline.py  test_e2e_validation.py  test_environment.py  test_feature_pipeline.py  test_hdp_hmm.py  test_validation_pipeline.py
scripts/: walk_forward.sh
