[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/events",
    "crates/strategy",
    "crates/execution",
    "crates/risk",
    "crates/gateway",
    "crates/backtest",
    "crates/forward",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

# Protocol Buffers
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Math
ndarray = "0.16"
nalgebra = "0.33"

# Error handling
anyhow = "1"
thiserror = "2"

# UUID / unique IDs
uuid = { version = "1", features = ["v7", "serde"] }

# ONNX Runtime (for model inference)
ort = { version = "2", features = ["load-dynamic"] }

# Database / storage
sled = "0.34"

# Compression
flate2 = "1"

# Temp directories (testing/utility)
tempfile = "3"

# Random (for Thompson Sampling)
rand = "0.8"
rand_distr = "0.4"

# Testing
proptest = "1"
