[project]
name = "fx-system-research"
version = "0.1.0"
description = "FX AI sub-short-term automated trading system - Research & ML pipeline"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "jupyterlab>=4.2",
    "scikit-learn>=1.5",
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "skl2onnx>=1.17",
    "nbformat>=5.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["research"]

[tool.pytest.ini_options]
testpaths = ["research/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py312"
line-length = 100
