[package]
name = "fx-backtest"
version.workspace = true
edition.workspace = true

[dependencies]
fx-core = { path = "../core" }
fx-events = { path = "../events" }
fx-strategy = { path = "../strategy" }
fx-execution = { path = "../execution" }
fx-risk = { path = "../risk" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
ndarray = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
tempfile = { workspace = true }
csv = { workspace = true }
