[package]
name = "fx-execution"
version.workspace = true
edition.workspace = true

[dependencies]
fx-core = { path = "../core" }
fx-events = { path = "../events" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
