[package]
name = "fx-execution"
version.workspace = true
edition.workspace = true

[dependencies]
fx-core = { path = "../core" }
fx-events = { path = "../events" }
prost = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
