[package]
name = "fx-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
fx-core = { path = "../core" }
fx-events = { path = "../events" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-tungstenite = "0.24"
futures-util = "0.3"
