[package]
name = "fx-risk"
version.workspace = true
edition.workspace = true

[dependencies]
fx-core = { path = "../core" }
fx-events = { path = "../events" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
